--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,8 @@
 title: "About"
 ---
 
-About this blog
+I'm a compiler engineer at NVIDIA, working on compilation of large language models to domain-specific architectures for inference acceleration.
+
+I received my PhD in Computer Science from Aarhus University, Denmark, where I worked on modular specification and formal verification of distributed systems using separation logic and the Roc proof assistant.
+
+My interests are in the areas of programming languages, compilers, and formal verification.
