--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -1,12 +1,10 @@
 ---
-title: "Welcome To My Blog"
-author: "Tristan O'Malley"
-date: "2026-01-03"
+title: "An experiment in writing things down"
+author: "Abel Nieto"
+date: "2026-01-06"
 categories: [news]
 ---
 
-This is the first post in a Quarto blog. Welcome!
+I've long wanted to start a blog, mainly to write things that I learn down (mostly for myself but possibly others as well).
 
-![](thumbnail.jpg)
-
-Since this post doesn't specify an explicit `image`, the first image in the post will be used in the listing page of posts.
+This is my attempt at it.
