--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -5,6 +5,4 @@ date: "2026-01-06"
 categories: [news]
 ---
 
-I've long wanted to start a blog, mainly to write things that I learn down (mostly for myself but possibly others as well).
-
-This is my attempt at it.
+I've long wanted to start a blog, mainly to write down things that I learn (mostly for myself but possibly others as well).
